--- a/index.html
+++ b/index.html
@@ -49,14 +49,9 @@
         <div class="welcome-slider">
           <img src="/img/slider-1.jpg" alt="slid 1">
           <div class="welcome-slider__text">
-            <h1 class="welcome-slider__text-title">
-              Welcome to tahiti
-            </h1>
-            <p class="welcome-slider__text-subtitle">
-              Your vacation starts here
-            </p>
+            <h1 class="welcome-slider__text-title">Welcome <span>to tahiti</span> </h1>
+            <p class="welcome-slider__text-subtitle">Your vacation starts here</p>
           </div>
-
         </div>
         
       </div>
@@ -72,6 +67,52 @@
     </div>
   </section>
 
+  <section class="discover">
+    <div class="container">
+      <h2 class="discover-title">Discover Tahiti</h2>
+      <p class="discover-subtitle">Just pick your destination. Our travel experts will take care of the rest.</p>
+      <div class="discover-items">
+
+        <div class="discover-items__item">
+          <img src="img/post_borabora.jpg" width="307" height="184" alt="Bora bora">
+          <h2 class="discover-items__title">Bora bora</h2>
+          <p class="discover-items__text">
+            Surrounded by sand-fringed motus  and a turquoise lagoon protected by a coral reef, Bora Bora is known...
+          </p>
+          <a href="#" class="discover-items__link">from $2,500</a>
+        </div>
+
+        <div class="discover-items__item">
+          <img src="img/post_moorea.jpg" width="307" height="184" alt="Moorea">
+          <h2 class="discover-items__title">Moorea</h2>
+          <p class="discover-items__text">
+            Mo'orea is a South Pacific island, part of French Polynesia's Society Islands archipelago. It's known for...
+          </p>
+          <a href="#" class="discover-items__link">from $2,500</a>
+        </div>
+
+        <div class="discover-items__item">
+          <img src="img/post_raitea.jpg" width="307" height="184" alt="Ra'iātea">
+          <h2 class="discover-items__title">Ra'iātea</h2>
+          <p class="discover-items__text">
+            Ra'iātea, is the second largest of the Society Islands in French Polynesia. The island is widely regarded as...
+          </p>
+          <a href="#" class="discover-items__link">from $2,500</a>
+        </div>
+
+        <div class="discover-items__item">
+          <img src="img/post_tahaa.jpg" width="307" height="184" alt="Taha’a">
+          <h2 class="discover-items__title">Taha’a</h2>
+          <p class="discover-items__text">
+            Taha’a is an island located among the western group, the Leeward Islands, of the Society Islands in...
+          </p>
+          <a href="#" class="discover-items__link">from $2,500</a>
+        </div>
+
+      </div>
+    </div>
+    
+  </section>
 
   <!-- js files -->
   <script src="https://code.jquery.com/jquery-2.2.0.min.js" type="text/javascript"></script>
