--- a/index.html
+++ b/index.html
@@ -123,6 +123,19 @@
     
   </section>
 
+  <section class="experience">
+    <div class="container">
+      <h2 class="discover-title experience__title">Experience <span>tahiti</span></h2>
+      <p class="discover-subtitle experience__subtitle">Immerse yourself in Tahiti’s unique culture</p>
+      <div class="experience-box">
+        <p class="experience-box__text">
+          The beauty, drama, and power of today’s Tahitian dance testify to its resilience in Polynesian culture. In ancient times, dances were directly linked with all aspects of life. One would dance for joy, to welcome a visitor, to pray to a god, to challenge an enemy, and to seduce a mate.
+        </p>
+        <a href="#" class="experience-box__link">Learn more</a>
+      </div>
+    </div>
+  </section>
+
   <!-- js files -->
   <script src="https://code.jquery.com/jquery-2.2.0.min.js" type="text/javascript"></script>
   <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
