--- a/index.html
+++ b/index.html
@@ -136,6 +136,33 @@
     </div>
   </section>
 
+  <section class="why">
+    <div class="container">
+      <h2 class="why-title">Why <span>tahiti?</span></h2>
+      <ul class="why-list">
+        <li class="why-list__item">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean molestie sollicitudin nibh, nec iaculis est luctus sit amet.
+        </li>
+        <li class="why-list__item">
+          Phasellus vehicula nibh vel arcu tempor, sed porttitor metus viverra. Praesent pharetra scelerisque eros, sed sollicitudin arcu pretium.
+        </li>
+        <li class="why-list__item">
+          Maecenas ac facilisis dolor. Curabitur vel nulla eget nunc finibus pulvinar. Ut nec ornare nisi. Duis scelerisque volutpat risus vel condimentum. 
+        </li>
+      </ul>
+    </div>
+  </section>
+
+  <section class="order">
+    <div class="container">
+      <div class="ordrt-box">
+        <h3 class="order-box__title">Unique vacations, tailored to your desires</h3>
+        <p class="order-box__text">Our travel experts will take care of everything. Whether choosing from our packaged vacations or customizing your own, extraordinary service and exceptional value are just a call or click away.</p>
+        <a href="#" class="order-box__link">Book now</a>
+      </div>
+    </div>
+  </section>
+
   <!-- js files -->
   <script src="https://code.jquery.com/jquery-2.2.0.min.js" type="text/javascript"></script>
   <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
