--- a/index.html
+++ b/index.html
@@ -119,6 +119,13 @@
         </div>
 
       </div>
+      <p class="discover-text">Discover all Tahiti has to offer.</p>
+      <select class="discover-select">
+        <option>Select an island</option>
+        <option>Select an island</option>
+        <option>Select an island</option>
+        <option>Select an island</option>
+      </select>
     </div>
     
   </section>
@@ -162,6 +169,12 @@
       </div>
     </div>
   </section>
+
+  <footer class="footer">
+    <div class="container">
+
+    </div>
+  </footer>
 
   <!-- js files -->
   <script src="https://code.jquery.com/jquery-2.2.0.min.js" type="text/javascript"></script>
