--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
 
   <section class="discover">
     <div class="container">
-      <h2 class="discover-title">Discover <span>Tahiti</span> </h2>
-      <p class="discover-subtitle">Just pick your destination. Our travel experts will take care of the rest.</p>
+      <h2 class="discover-title title">Discover <span>Tahiti</span> </h2>
+      <p class="discover-subtitle subtitle">Just pick your destination. Our travel experts will take care of the rest.</p>
       <div class="discover-items">
 
         <div class="discover-items__item">
@@ -132,8 +132,8 @@
 
   <section class="experience">
     <div class="container">
-      <h2 class="discover-title experience__title">Experience <span>tahiti</span></h2>
-      <p class="discover-subtitle experience__subtitle">Immerse yourself in Tahiti’s unique culture</p>
+      <h2 class="experience__title  title">Experience <span>tahiti</span></h2>
+      <p class="experience__subtitle subtitle">Immerse yourself in Tahiti’s unique culture</p>
       <div class="experience-box">
         <p class="experience-box__text">
           The beauty, drama, and power of today’s Tahitian dance testify to its resilience in Polynesian culture. In ancient times, dances were directly linked with all aspects of life. One would dance for joy, to welcome a visitor, to pray to a god, to challenge an enemy, and to seduce a mate.
@@ -145,7 +145,7 @@
 
   <section class="why">
     <div class="container">
-      <h2 class="why-title">Why <span>tahiti?</span></h2>
+      <h2 class="why-title title">Why <span>tahiti?</span></h2>
       <ul class="why-list">
         <li class="why-list__item">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean molestie sollicitudin nibh, nec iaculis est luctus sit amet.
