правки путей для картинок

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
 
-  <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
-  <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css"/>
+  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
+  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css"/>
 
   <title>Tahiti - home page</title>
 </head>
@@ -20,7 +20,7 @@
       <div class="header_container">
         <div class="header__logo">
           <a href="#">
-            <img src="/img/logo.png" width="179" height="44" alt="Tahiti logo">
+            <img src="img/logo.png" width="179" height="44" alt="Tahiti logo">
           </a>
         </div>
         <div class="header-menu">
@@ -47,7 +47,7 @@
     <div class="slider welcom-slide">
       <div>
         <div class="welcome-slider">
-          <img src="/img/slider-1.jpg" alt="slid 1">
+          <img src="img/slider-1.jpg" alt="slid 1">
           <div class="welcome-slider__text">
             <h1 class="welcome-slider__text-title">Welcome <span>to tahiti</span> </h1>
             <p class="welcome-slider__text-subtitle">Your vacation starts here</p>
@@ -57,13 +57,13 @@
         
       </div>
       <div>
-        <img src="/img/slider-2.jpg" alt="slid 2">
+        <img src="img/slider-2.jpg" alt="slid 2">
       </div>
       <div>
-        <img src="/img/slider-3.jpg" alt="slid 3">
+        <img src="img/slider-3.jpg" alt="slid 3">
       </div>
       <div>
-        <img src="/img/slider-4.jpg" alt="slid 4">
+        <img src="img/slider-4.jpg" alt="slid 4">
       </div>
     </div>
   </section>
@@ -178,8 +178,8 @@
 
   <!-- js files -->
   <script src="https://code.jquery.com/jquery-2.2.0.min.js" type="text/javascript"></script>
-  <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-  <script src="/js/main.js"></script>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+  <script src="js/main.js"></script>
 
 </body>
 
