--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/normalize.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://tatien.ru/assets/css/framework/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
 
   <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
@@ -18,7 +18,7 @@
   <header class="header">
     <div class="container">
       <div class="header_container">
-        <div class="logo header__logo">
+        <div class="logo header-logo">
           <a href="#">
             <img src="img/logo.png" width="179" height="44" alt="Tahiti logo">
           </a>
@@ -175,7 +175,7 @@
       <div class="footer-container">
         <div class="logo footer-logo">
           <a href="#">
-            <img src="/img/logo.png" width="180" height="45" alt="Tahiti logo">
+            <img src="img/logo.png" width="180" height="45" alt="Tahiti logo">
           </a>
         </div>
         
