--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://tatien.ru/assets/css/framework/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
 
   <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
@@ -23,19 +23,20 @@
             <img src="img/logo.png" width="179" height="44" alt="Tahiti logo">
           </a>
         </div>
+        
         <div class="header-menu">
-          <ul class="header-menu__list">
-            <li class="header-menu__list-item">
-              <a class="header-menu__list-link" href="#">Discover</a>
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0 header-menu__list">
+            <li class="nav-item header-menu__list-item">
+              <a class="nav-link header-menu__list-link" href="#">Discover</a>
             </li>
-            <li class="header-menu__list-item">
-              <a class="header-menu__list-link" href="#">Experience</a>
+            <li class="nav-item header-menu__list-item">
+              <a class="nav-link header-menu__list-link" href="#">Experience</a>
             </li>
-            <li class="header-menu__list-item">
-              <a class="header-menu__list-link" href="#">Travel guides</a>
+            <li class="nav-item header-menu__list-item">
+              <a class="nav-link header-menu__list-link" href="#">Travel guides</a>
             </li>
-            <li class="header-menu__list-item">
-              <a class="header-menu__list-link" href="#">About</a>
+            <li class="nav-item header-menu__list-item">
+              <a class="nav-link header-menu__list-link" href="#">About</a>
             </li>
           </ul>
         </div>
@@ -130,7 +131,7 @@
     
   </section>
 
-  <section class="experience">
+  <section class="experience bg-pos" style="background-image: url(img/experience-bg.jpg);">
     <div class="container">
       <h2 class="experience__title  title">Experience <span>tahiti</span></h2>
       <p class="experience__subtitle subtitle">Immerse yourself in Tahiti’s unique culture</p>
@@ -146,21 +147,21 @@
   <section class="why">
     <div class="container">
       <h2 class="why-title title">Why <span>tahiti?</span></h2>
-      <ul class="why-list">
-        <li class="why-list__item">
+      <ul class="row why-list">
+        <li class="col-xl-4 col-md-4 col-lg-4 col-sm-4 col-12 why-list__item">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean molestie sollicitudin nibh, nec iaculis est luctus sit amet.
         </li>
-        <li class="why-list__item">
+        <li class="col-xl-4 col-md-4 col-lg-4 col-sm-4 col-12 why-list__item">
           Phasellus vehicula nibh vel arcu tempor, sed porttitor metus viverra. Praesent pharetra scelerisque eros, sed sollicitudin arcu pretium.
         </li>
-        <li class="why-list__item">
+        <li class="col-xl-4 col-md-4 col-lg-4 col-sm-4 col-12 why-list__item">
           Maecenas ac facilisis dolor. Curabitur vel nulla eget nunc finibus pulvinar. Ut nec ornare nisi. Duis scelerisque volutpat risus vel condimentum. 
         </li>
       </ul>
     </div>
   </section>
 
-  <section class="order">
+  <section class="order bg-pos" style="background-image: url(img/slider-3.jpg);">
     <div class="container">
       <div class="ordrt-box">
         <h3 class="order-box__title">Unique vacations, tailored to your desires</h3>
@@ -170,7 +171,7 @@
     </div>
   </section>
 
-  <footer class="footer">
+  <!-- <footer class="footer">
     <div class="container">
       <div class="footer-container">
         <div class="logo footer-logo">
@@ -294,11 +295,12 @@
         </ul>
       </div>
     </div>
-  </footer>
+  </footer> -->
 
   <!-- js files -->
   <script src="https://code.jquery.com/jquery-2.2.0.min.js" type="text/javascript"></script>
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.min.js" integrity="sha384-skAcpIdS7UcVUC05LJ9Dxay8AXcDYfBJqt1CJ85S/CFujBsIzCIv+l9liuYLaMQ/" crossorigin="anonymous"></script>
   <script src="js/main.js"></script>
 
 </body>
