--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>
         
         <div class="header-menu">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0 header-menu__list">
+          <ul class="header-menu__list">
             <li class="nav-item header-menu__list-item">
               <a class="nav-link header-menu__list-link" href="#">Discover</a>
             </li>
