--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/media.css">
 
   <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
   <link rel="stylesheet" type="text/css"
@@ -28,7 +29,7 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-            <ul class="navbar-nav">
+            <ul class="navbar-nav header-menu__list">
               <li class="nav-item header-menu__list-item">
                 <a class="nav-link header-menu__list-link" href="#">Discover</a>
               </li>
@@ -190,19 +191,19 @@
       <div class="row">
 
         <div class="col-12">
-          <p class="discover-text">Discover all Tahiti has to offer.</p>
+          <p class="discover-text text-center">Discover all Tahiti has to offer.</p>
         </div>
 
-        <div class="col-12">
-          <form action="" class="discover-form">
-            <select class="form-select discover-form__select" aria-label="Default select example">
+        <div class="col-10">
+          <!-- <form action="" class="discover-form">
+            <select class="discover-form__select">
               <option selected>Select an island</option>
               <option value="1">One</option>
               <option value="2">Two</option>
               <option value="3">Three</option>
             </select>
-            <button class="button">Explore</button>
-          </form>
+            <button class="btn discover-form__btn">Explore</button>
+          </form> -->
         </div>
       </div>
 
@@ -223,15 +224,15 @@
       </div>
       <div class="experience-box">
         <div class="row">
-          <div class="col-10">
+          <div class="col-12 col-md-10 offset-md-1">
             <p class="experience-box__text">
               The beauty, drama, and power of today’s Tahitian dance testify to its resilience in Polynesian culture. In
               ancient times, dances were directly linked with all aspects of life. One would dance for joy, to welcome a
               visitor, to pray to a god, to challenge an enemy, and to seduce a mate.
             </p>
           </div>
-          <div class="col-4 offset-md-4">
-            <a href="#" class="experience-box__link">Learn more</a>
+          <div class="col-12">
+            <a href="#" class="experience-box__link text-center">Learn more</a>
           </div>
         </div>
 
@@ -284,8 +285,8 @@
             vacations or customizing your own, extraordinary service and exceptional value are just a call or click away.
           </p>
         </div>
-        <div class="col-4 offset-md-4">
-          <a href="#" class="order-box__link">Book now</a>
+        <div class="col-12">
+          <a href="#" class="order-box__link text-center">Book now</a>
         </div>
       </div>
     </div>
