--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <header class="header">
     <div class="container">
 
-      <nav class="navbar navbar-expand-lg">
+      <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container-fluid">
           <a class="navbar-brand" href="/">
             <img src="img/logo.png" width="179" height="44" alt="Tahiti logo">
@@ -280,7 +280,7 @@
         <div class="col-12">
           <h3 class="text-center order-box__title">Unique vacations, tailored to your desires</h3>
         </div>
-        <div class="co-10">
+        <div class="col-10">
           <p class="order-box__text">Our travel experts will take care of everything. Whether choosing from our packaged
             vacations or customizing your own, extraordinary service and exceptional value are just a call or click away.
           </p>
