--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
         <div class="col-12">
           <h3 class="text-center order-box__title">Unique vacations, tailored to your desires</h3>
         </div>
-        <div class="col-10">
+        <div class="col-12">
           <p class="order-box__text">Our travel experts will take care of everything. Whether choosing from our packaged
             vacations or customizing your own, extraordinary service and exceptional value are just a call or click away.
           </p>
@@ -298,7 +298,7 @@
       <!-- <div class="footer-container"> -->
         <div class="row">
 
-          <div class="col-2">
+          <div class="col-12">
             <div class="logo footer-logo">
               <a href="#">
                 <img src="img/logo.png" width="180" height="45" alt="Tahiti logo">
@@ -306,7 +306,10 @@
             </div>
           </div>
 
-          <div class="col-2">
+          <div class="col-12">
+            <h4 class="footer-nav__title">
+              Islands
+            </h4>
             <ul class="footer-container__items">
               <li class="footer-container__item">
                 <a href="#" class="footer-container__link">Tahiti</a>
@@ -350,7 +353,10 @@
             </ul>
           </div>
 
-          <div class="col-2">
+          <div class="col-12">
+            <h4 class="footer-nav__title">
+              Packages
+            </h4>
             <li class="footer-container__item">
               <a href="#" class="footer-container__link">Honeymoons</a>
             </li>
@@ -380,7 +386,10 @@
             </li>
           </div>
           
-          <div class="col-3">
+          <div class="col-12">
+            <h4 class="footer-nav__title">
+              Tahiti
+            </h4>
             <ul class="footer-container__items">
               <li class="footer-container__item">
                 <a href="#" class="footer-container__link">About Us</a>
@@ -403,7 +412,7 @@
             </ul>
           </div>
 
-          <div class="col-3">
+          <div class="col-12">
             <ul class="footer-soc">
               <li class="footer-soc__item">
     
