--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
         </div>
 
         <div class="col-10">
-          <!-- <form action="" class="discover-form">
+          <form action="" class="discover-form">
             <select class="discover-form__select">
               <option selected>Select an island</option>
               <option value="1">One</option>
@@ -203,7 +203,7 @@
               <option value="3">Three</option>
             </select>
             <button class="btn discover-form__btn">Explore</button>
-          </form> -->
+          </form>
         </div>
       </div>
 
@@ -298,7 +298,7 @@
       <!-- <div class="footer-container"> -->
         <div class="row">
 
-          <div class="col-12">
+          <div class="col-12 col-md-2">
             <div class="logo footer-logo">
               <a href="#">
                 <img src="img/logo.png" width="180" height="45" alt="Tahiti logo">
@@ -306,7 +306,7 @@
             </div>
           </div>
 
-          <div class="col-12">
+          <div class="col-12 col-md-2">
             <h4 class="footer-nav__title">
               Islands
             </h4>
@@ -353,7 +353,7 @@
             </ul>
           </div>
 
-          <div class="col-12">
+          <div class="col-12 col-md-2">
             <h4 class="footer-nav__title">
               Packages
             </h4>
@@ -386,7 +386,7 @@
             </li>
           </div>
           
-          <div class="col-12">
+          <div class="col-12 col-md-2">
             <h4 class="footer-nav__title">
               Tahiti
             </h4>
@@ -412,7 +412,7 @@
             </ul>
           </div>
 
-          <div class="col-12">
+          <div class="col-12 col-md-2">
             <ul class="footer-soc">
               <li class="footer-soc__item">
     
