--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
   <link rel="stylesheet" href="css/media.css">
 
   <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
-  <link rel="stylesheet" type="text/css"
-    href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css" />
+  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css" />
 
   <title>Tahiti - home page</title>
 </head>
@@ -46,7 +45,7 @@
           </div>
         </div>
       </nav>
-      
+
     </div>
   </header>
 
@@ -272,7 +271,6 @@
   <footer class="footer">
     <div class="container">
 
-      <!-- <div class="footer-container"> -->
         <div class="row">
 
           <div class="col-12 col-md-2">
