правки для удобства

--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
           </div>
 
           <div class="col-12 col-md-3">
-            <ul class="footer-soc">
+            <ul class="footer-social">
               <li class="footer-soc__item">
     
               </li>
