--- a/index.html
+++ b/index.html
@@ -281,6 +281,10 @@
             </div>
           </div>
 
+          <div class="col-1">
+            
+          </div>
+
           <div class="col-12 col-md-2">
             <div class="footer-container__nav">
               <h4 class="footer-nav__title">
@@ -331,7 +335,7 @@
           </div>
 
 
-          <div class="col-12 col-md-3">
+          <div class="col-12 col-md-2">
             <div class="footer-container__nav">
               <h4 class="footer-nav__title">
                 Packages
