--- a/index.html
+++ b/index.html
@@ -101,10 +101,10 @@
           <h2 class="discover-title title">Discover <span>Tahiti</span> </h2>
         </div>
         <div class="col-12">
-          <p class="discover-subtitle subtitle">Just pick your destination. Our travel experts will take care of the rest.
+          <p class="discover-subtitle subtitle">Just pick your destination. Our travel experts will take care of the rest.</p>
         </div>
       </div>
-      </p>
+      
       <div class="row discover-items">
 
         <div class="col-12 col-sm-6 col-md-4 col-lg-3">
@@ -268,7 +268,7 @@
     </div>
   </section>
 
-  <footer class="footer">
+  <footer class="footer" style="display: none;">
     <div class="container">
 
         <div class="row">
