--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
     </div>
   </section>
 
-  <footer class="footer" style="display: none;">
+  <footer class="footer">
     <div class="container">
 
         <div class="row">
