--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
 
         <div class="row">
 
-          <div class="col-12 col-md-2">
+          <div class="col-12 col-md-3 col-lg-2 col-xl-2">
             <div class="logo footer-logo">
               <a href="#">
                 <img src="img/logo.png" width="180" height="45" alt="Tahiti logo">
@@ -281,7 +281,7 @@
             </div>
           </div>
 
-          <div class="offset-md-1 col-12 col-md-2">
+          <div class="offset-md-1 col-12 col-md-2 col-lg-2 col-xl-2">
             <div class="footer-container__nav">
               <h4 class="footer-nav__title">
                 Islands
@@ -331,7 +331,7 @@
           </div>
 
 
-          <div class="col-12 col-md-2">
+          <div class="col-12 col-md-3 col-lg-3 col-xl-2">
             <div class="footer-container__nav">
               <h4 class="footer-nav__title">
                 Packages
@@ -367,7 +367,7 @@
           </div>
           
 
-          <div class="col-12 col-md-2">
+          <div class="col-12 col-md-3 col-lg-3 col-xl-2">
             <div class="footer-container__nav">
               <h4 class="footer-nav__title">
                 Tahiti
@@ -395,7 +395,7 @@
             </div>
           </div>
 
-          <div class="col-12 col-md-3">
+          <div class="col-12 col-md-6 col-lg-6 col-xl-3">
             <ul class="footer-social">
               <li class="footer-social__item">
                 <a class="footer-social__item-icon facebooc-icon" href="#"></a>
